crates/hdk/tests/tests/macros/unit_enum_no_unit.stderr
error: macro requires attribute `unit_enum`.

         = help: Add attribute like `unit_enum(UnitEnumName)`

 --> tests/macros/unit_enum_no_unit.rs:3:10
  |
3 | #[derive(UnitEnum)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `UnitEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
