crates/hdk/tests/tests/macros/unit_enum_no_unit.rs
use hdk::prelude::hdi::prelude::*;

#[derive(UnitEnum)]
enum Nesting {
    A(A),
    B(A),
}

struct A;

fn main() {}
